# lego-cam

./: README.md  pyproject.toml  requirements.txt
lego_cam/: __init__.py  __main__.py  cli.py  config.py  db.py  db_stub.py  detection_heuristic.py  detection_stub.py  detection_yolo.py  main.py  pipeline.py  reporting.py
